# EEG-emotion-computing

./: .gitignore  README.md  TASK1_CHECK_MANUAL.md  requirements.txt
Task1-preprocess/: .gitignore  README.md  requirements.txt
Task1-preprocess/data/: README.md
Task1-preprocess/output/: README.md
Task1-preprocess/src/: prepare_task2_dataset.py  prepare_task2_labels.py  run_task1.py
Task1-preprocess/src/deap_task1/: constants.py  io.py  plotting.py
Task1-preprocess/src/deap_task2/: constants.py  dataset.py  io.py  labels.py
Task1-preprocess/tests/: test_deap_task1_contract.py
Task2-base_modeling/: README.md
Task2-base_modeling/output/binary-loto/mlp/: loto-results.txt
Task2-base_modeling/output/binary-loto/mlp-regression/: loto-results.txt
Task2-base_modeling/output/binary-loto/rf/: loto-results.txt
Task2-base_modeling/output/binary-loto/rf-regression/: loto-results.txt
Task2-base_modeling/output/binary-loto/svm/: loto-results.txt
Task2-base_modeling/output/binary-loto/svm-regression/: loto-results.txt
Task2-base_modeling/output/threeclass-loto/mlp/: loto-results.txt
Task2-base_modeling/output/threeclass-loto/mlp-regression/: loto-results.txt
Task2-base_modeling/src/: base-modeling-loto.py  base-modeling-regression.py  base-modeling.py
data/: README.md
output/: README.md
preprocess/: .gitignore  README.md  pyproject.toml
preprocess/data/: README.md
preprocess/output/: README.md
preprocess/src/deap_task1/: pipeline.py  preprocess.py
preprocess/tests/: pytest.local.ini
src/deap_task1/: segment.py
(+4 files in other folders)
