[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deap-task1"
version = "0.1.0"
description = "DEAP raw BDF preprocessing pipeline for EEG HCI coursework"
requires-python = ">=3.12"
dependencies = [
  "mne>=1.12",
  "numpy>=2.0",
  "pandas>=2.0",
  "matplotlib>=3.8",
  "scipy>=1.17",
  "scikit-learn>=1.8",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
